fix background problem on iphone test

--- a/style/style.css
+++ b/style/style.css
@@ -374,6 +374,7 @@ body {
   color: #4d7fff;
   letter-spacing: 0;
   text-align: left;
+  height: auto;
 }
 
 .main .third-section .list-container ul li img {
@@ -717,7 +718,7 @@ body {
     padding: 24vh 0 0 0;
     background-size: 500% 100%;
     position: static;
-    margin-top: -17vh !important;
+    margin-top: -20vh !important;
   }
   .wrap-ss {
      display: -webkit-box;
